assets/dropdown//map: rm bootstrap overwrite of z-index and reduce leaflet default by 1 to ensure correct layering with menus fixes #1543

--- a/adhocracy-plus/assets/scss/components/_dropdown.scss
+++ b/adhocracy-plus/assets/scss/components/_dropdown.scss
@@ -13,7 +13,6 @@
     margin: 0;
     border-radius: 2px;
     border: 1px solid $text-color;
-    z-index: 3;
 
     a,
     button {
